Fixed autocomplete text overlap issue

--- a/client/src/styles/placesautocomplete.scss
+++ b/client/src/styles/placesautocomplete.scss
@@ -2,7 +2,6 @@
   padding: 5px;
   position: absolute;
   top: 30px;
-  overflow-x: auto;
   width: 100%;
   border-radius: 3px;
   border: 1px solid rgba(0, 0, 0, 0.12);
@@ -19,12 +18,13 @@
     border-radius: 3px;
     padding: 0 5px;
     cursor: pointer;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     &.active{
       background-color: #edf2f6;
+      color: #545566;
     }
-  }
-  .suggestion-item--active{
-    background-color: #edf2f6;
   }
 }
